Fixing item properties in HorizontalScrollbar component

--- a/src/pages/create-list/components/horizontal-scrollbar/style.module.css
+++ b/src/pages/create-list/components/horizontal-scrollbar/style.module.css
@@ -6,19 +6,22 @@
 
 .scrollContainer {
   display: flex;
+  flex-direction: row;
+  align-items: flex-start;
   overflow-x: auto;
   white-space: nowrap;
   width: 90%;
   padding: 10px;
-  gap: 20px;
 }
 
 .item {
   display: inline-block;
-  width: 120px;
+  width: 130px;
   border-radius: 5px;
   height: 220px;
+  margin: 10px;
   position: relative;
+  flex-shrink: 0;
   box-shadow: 
     -5px -5px 10px rgba(255, 255, 255, 0.1), /* Left shadow */
     5px 5px 10px rgba(255, 255, 255, 0.1);  /* Right shadow */
@@ -31,8 +34,14 @@
   border-top-right-radius: 7px;
 }
 
-.nameContainer p {
-  margin-top: 12%;
-  color: rgb(255, 255, 255);
+.nameContainer {
+  width: 100%;
+  height: 40px;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
   font-size: 16px;
+  white-space: wrap;
+  line-height: 1.1;
+  padding: 5%;
+  text-align: left;
 }
